--- a/src/main/resources/pl/pkubicki/fxml/FreeTravel.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/FreeTravel.fxml
@@ -29,10 +29,10 @@
     <ChoiceBox fx:id="unitChoiceBox" GridPane.columnIndex="2" GridPane.rowIndex="4" />
 
     <TextField fx:id="startPointText" editable="false" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-     <Button fx:id="createProxPointsButton" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#createProximityPoints" prefHeight="25.0" prefWidth="373.0" text="Create POI list in vicinity" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-     <Button fx:id="searchButton" onAction="#searchButtonHandler" text="Search" GridPane.columnIndex="2" />
+     <Button fx:id="createProxPointsButton" styleClass="shadow" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onAction="#createProximityPoints" prefHeight="25.0" prefWidth="373.0" text="Create POI list in vicinity" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+     <Button fx:id="searchButton" onAction="#searchButtonHandler" styleClass="shadow" text="Search" GridPane.columnIndex="2" />
    <Label text="Start Point:" GridPane.rowIndex="5" />
-   <Button fx:id="createStartPointButton" mnemonicParsing="false" onAction="#makeStartPointFromGps" text="Create Start Point" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+   <Button fx:id="createStartPointButton" mnemonicParsing="false" styleClass="shadow" onAction="#makeStartPointFromGps" text="Create Start Point" GridPane.columnIndex="2" GridPane.rowIndex="5" />
    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="8">
      <columnConstraints>
        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -45,7 +45,7 @@
          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
      </rowConstraints>
       <children>
-         <Button fx:id="buttonS" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="SOUTH" GridPane.columnIndex="1" GridPane.rowIndex="2">
+         <Button fx:id="buttonS" styleClass="shadow" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="SOUTH" GridPane.columnIndex="1" GridPane.rowIndex="2">
             <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
@@ -53,7 +53,7 @@
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </GridPane.margin>
          </Button>
-         <Button fx:id="buttonN" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="NORTH" GridPane.columnIndex="1">
+         <Button fx:id="buttonN" styleClass="shadow" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="NORTH" GridPane.columnIndex="1">
             <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
@@ -61,7 +61,7 @@
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </GridPane.margin>
          </Button>
-         <Button fx:id="buttonW" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="WEST" GridPane.rowIndex="1">
+         <Button fx:id="buttonW" styleClass="shadow" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="WEST" GridPane.rowIndex="1">
             <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
@@ -69,7 +69,7 @@
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </GridPane.margin>
          </Button>
-         <Button fx:id="buttonE" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="EAST" GridPane.columnIndex="2" GridPane.rowIndex="1">
+         <Button fx:id="buttonE" styleClass="shadow" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="EAST" GridPane.columnIndex="2" GridPane.rowIndex="1">
             <padding>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
@@ -77,7 +77,7 @@
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </GridPane.margin>
          </Button>
-         <Button fx:id="buttonNW" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="NORTH WEST">
+         <Button fx:id="buttonNW" styleClass="shadow" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="NORTH WEST">
             <GridPane.margin>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </GridPane.margin>
@@ -85,7 +85,7 @@
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
          </Button>
-         <Button fx:id="buttonNE" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="NORTH EAST" GridPane.columnIndex="2">
+         <Button fx:id="buttonNE" styleClass="shadow" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="NORTH EAST" GridPane.columnIndex="2">
             <GridPane.margin>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </GridPane.margin>
@@ -93,7 +93,7 @@
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
          </Button>
-         <Button fx:id="buttonSW" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="SOUTH WEST" GridPane.rowIndex="2">
+         <Button fx:id="buttonSW" styleClass="shadow" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="SOUTH WEST" GridPane.rowIndex="2">
             <GridPane.margin>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </GridPane.margin>
@@ -101,7 +101,7 @@
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </padding>
          </Button>
-         <Button fx:id="buttonSE" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="SOUTH EAST" GridPane.columnIndex="2" GridPane.rowIndex="2">
+         <Button fx:id="buttonSE" styleClass="shadow" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="SOUTH EAST" GridPane.columnIndex="2" GridPane.rowIndex="2">
             <GridPane.margin>
                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
             </GridPane.margin>
@@ -119,15 +119,15 @@
              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
            </rowConstraints>
             <children>
-               <Button fx:id="buttonPlay" mnemonicParsing="false" onAction="#playAudio" prefHeight="40.0" prefWidth="40.0" styleClass="play" text="|&gt;" GridPane.halignment="CENTER">
+               <Button fx:id="buttonPlay" mnemonicParsing="false" onAction="#playAudio" prefHeight="40.0" prefWidth="40.0" styleClass="shadow, play" text="|&gt;" GridPane.halignment="CENTER">
                   <GridPane.margin>
                      <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                   </GridPane.margin></Button>
-               <Button fx:id="buttonPause" mnemonicParsing="false" onAction="#pauseAudio" prefHeight="40.0" prefWidth="40.0" styleClass="pause" text="||" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+               <Button fx:id="buttonPause" mnemonicParsing="false" onAction="#pauseAudio" prefHeight="40.0" prefWidth="40.0" styleClass="shadow, pause" text="||" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                   <GridPane.margin>
                      <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                   </GridPane.margin></Button>
-               <Button fx:id="buttonStop" mnemonicParsing="false" onAction="#stopAudio" prefHeight="40.0" prefWidth="40.0" styleClass="stop" text="[x]" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+               <Button fx:id="buttonStop" mnemonicParsing="false" onAction="#stopAudio" prefHeight="40.0" prefWidth="40.0" styleClass="shadow, stop" text="[x]" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                   <GridPane.margin>
                      <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                   </GridPane.margin></Button>
