--- a/src/main/resources/pl/pkubicki/fxml/OwlPanel.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/OwlPanel.fxml
@@ -42,32 +42,38 @@
                     <GridPane alignment="center" hgap="10" vgap="10">
                         <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
 <!--                        <gridLinesVisible>true</gridLinesVisible>-->
+                        <Label fx:id="labelForSearchText" text="Search:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                        <TextField fx:id="searchText" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                        <Button fx:id="searchButton" styleClass="shadow" onAction="#searchButtonHandler" text="Search" GridPane.columnIndex="2" />
 
-                        <Label text="Latitude:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                        <ValidatedTextField fx:id="latitudeText" minLength="4" maxLength="20" mask="$LATITUDE_PATTERN" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                        <Label fx:id="labelForSearchResultsChoiceBox" text="Search results:" GridPane.rowIndex="1" />
+                        <ChoiceBox fx:id="searchResultsChoiceBox" prefHeight="25.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-                        <Label text="Longitude:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-                        <ValidatedTextField fx:id="longitudeText" minLength="4" maxLength="20" mask="$LONGITUDE_PATTERN" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="labelForLatitudeText" text="Latitude:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                        <ValidatedTextField fx:id="latitudeText" minLength="4" maxLength="20" mask="$LATITUDE_PATTERN" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-                        <Label text="Point label:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                        <ValidatedTextField fx:id="labelText" minLength="3" maxLength="30" mask=".*" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="labelForLongitudeText" text="Longitude:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                        <ValidatedTextField fx:id="longitudeText" minLength="4" maxLength="20" mask="$LONGITUDE_PATTERN" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-                        <Label text="Point class:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                        <ChoiceBox fx:id="realEstatesChoiceBox" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="3" />
+                        <Label fx:id="labelForLabelText" text="Point label:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                        <ValidatedTextField fx:id="labelText" minLength="3" maxLength="30" mask=".*" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-                        <Label text="Point comment:" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+                        <Label fx:id="labelForRealEstatesChoiceBox" text="Point class:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                        <ChoiceBox fx:id="realEstatesChoiceBox" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="5" />
+
+                        <Label fx:id="labelForCommentText" text="Point comment:" GridPane.columnIndex="0" GridPane.rowIndex="8" />
                         <TextArea fx:id="commentText" maxHeight="50" GridPane.columnIndex="1" GridPane.rowIndex="8" />
 
                         <Label text="Audio file:" GridPane.columnIndex="0" GridPane.rowIndex="9" />
                         <Text fx:id="fileName" GridPane.columnIndex="1" GridPane.rowIndex="9" />
 
                         <HBox alignment="BOTTOM_RIGHT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="9">
-                            <Button fx:id="selectFileButton" onAction="#selectFile" text="Open File" />
+                            <Button fx:id="selectFileButton" styleClass="shadow" onAction="#selectFile" text="Open File" />
                         </HBox>
                         <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="12">
-                            <Button onAction="#submitHandler" text="Submit Point" />
+                            <Button fx:id="submitButton" styleClass="shadow" onAction="#submitHandler" text="Submit Point" />
                         </HBox>
-                        <Text fx:id="submitStatus" GridPane.columnIndex="1" GridPane.rowIndex="13" />
+                        <Text fx:id="submitStatus" styleClass="error" GridPane.columnIndex="1" GridPane.rowIndex="13" />
                         <stylesheets>
                             <URL value="@../css/BasicStyle.css" />
                         </stylesheets>
