--- a/src/main/resources/pl/pkubicki/fxml/RouteTravel.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/RouteTravel.fxml
@@ -10,7 +10,7 @@
 <!--    <gridLinesVisible>true</gridLinesVisible>-->
     <Label text="Search START:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
     <TextField fx:id="searchStartText" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-    <Button fx:id="searchStartButton" onAction="#searchStartButtonHandler" text="Search" GridPane.columnIndex="2" />
+    <Button fx:id="searchStartButton" onAction="#searchStartButtonHandler" styleClass="shadow" text="Search" GridPane.columnIndex="2" />
     <Label text="Start point:" GridPane.rowIndex="1" />
     <ChoiceBox fx:id="searchStartResultsChBox" prefHeight="25.0" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
@@ -21,7 +21,7 @@
 
     <Label text="Search END:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
     <TextField fx:id="searchEndText" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-    <Button fx:id="searchEndButton" onAction="#searchEndButtonHandler" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+    <Button fx:id="searchEndButton" onAction="#searchEndButtonHandler" styleClass="shadow" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="4" />
     <Label text="End point:" GridPane.rowIndex="5" />
     <ChoiceBox fx:id="searchEndResultsChBox" prefHeight="25.0" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
@@ -30,7 +30,7 @@
     <Label text="End Longitude:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
     <TextField fx:id="endLongitudeText" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 
-    <Button fx:id="generateRouteButton" onAction="#generateRouteButtonHandler" text="Generate Travel Route" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
+    <Button fx:id="generateRouteButton" onAction="#generateRouteButtonHandler" styleClass="shadow" text="Generate Travel Route" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
 
     <GridPane GridPane.rowIndex="9">
 
@@ -60,15 +60,15 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
         <children>
-            <Button fx:id="buttonPlay" minHeight="50.0" minWidth="70.0" mnemonicParsing="false" onAction="#playAudio" styleClass="play" text="|&gt;" GridPane.halignment="CENTER">
+            <Button fx:id="buttonPlay" minHeight="50.0" minWidth="70.0" mnemonicParsing="false" onAction="#playAudio" styleClass="shadow, play" text="|&gt;" GridPane.halignment="CENTER">
                 <GridPane.margin>
                     <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                 </GridPane.margin></Button>
-            <Button fx:id="buttonPause" mnemonicParsing="false" onAction="#pauseAudio" minHeight="50.0" minWidth="70.0" styleClass="pause" text="||" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <Button fx:id="buttonPause" mnemonicParsing="false" onAction="#pauseAudio" minHeight="50.0" minWidth="70.0" styleClass="shadow, pause" text="||" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                 <GridPane.margin>
                     <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                 </GridPane.margin></Button>
-            <Button fx:id="buttonStop" mnemonicParsing="false" onAction="#stopAudio" minHeight="50.0" minWidth="70.0" styleClass="stop" text="[x]" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+            <Button fx:id="buttonStop" mnemonicParsing="false" onAction="#stopAudio" minHeight="50.0" minWidth="70.0" styleClass="shadow, stop" text="[x]" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                 <GridPane.margin>
                     <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
                 </GridPane.margin></Button>
