add: validation to all fields with important input in routetravel and freetravel (no validation for search fields - no need, bad input = no search results), added audio cues in whole app, code cleaning + refactor

--- a/src/main/resources/pl/pkubicki/fxml/OwlPanel.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/OwlPanel.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import pl.pkubicki.models.ValidatedTextField?>
+<?import pl.pkubicki.extensions.ValidatedTextField?>
 
 <?import java.lang.String?>
 
@@ -15,96 +15,100 @@
         <String fx:id="LATITUDE_PATTERN" fx:value="^(\+|-)?(?:90(?:(?:\.0+)?)|(?:[0-9]|[1-8][0-9])(?:(?:\.\d+)?))$"/>
         <String fx:id="LONGITUDE_PATTERN" fx:value="^(\+|-)?(?:180(?:(?:\.0+)?)|(?:[0-9]|[1-9][0-9]|1[0-7][0-9])(?:(?:\.\d+)?))$"/>
     </fx:define>
-   <MenuBar>
-     <menus>
-       <Menu mnemonicParsing="false" text="File">
-         <items>
-           <MenuItem mnemonicParsing="false" text="Close" />
-         </items>
-       </Menu>
-       <Menu mnemonicParsing="false" text="Edit">
-         <items>
-           <MenuItem mnemonicParsing="false" text="Delete" />
-         </items>
-       </Menu>
-       <Menu mnemonicParsing="false" text="Help">
-         <items>
-           <MenuItem mnemonicParsing="false" text="About" />
-         </items>
-       </Menu>
-     </menus>
-   </MenuBar>
+    <MenuBar>
+        <Menu mnemonicParsing="false" text="File">
+            <MenuItem mnemonicParsing="false" text="Close"/>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Edit">
+            <MenuItem mnemonicParsing="false" text="Delete"/>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Help">
+            <MenuItem mnemonicParsing="false" text="About"/>
+        </Menu>
+    </MenuBar>
 
     <TabPane minHeight="800" minWidth="800" tabClosingPolicy="UNAVAILABLE">
-        <tabs>
-            <Tab text="Create new point">
-                <AnchorPane>
-                    <GridPane alignment="center" hgap="10" vgap="10">
-                        <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
-<!--                        <gridLinesVisible>true</gridLinesVisible>-->
-                        <Label fx:id="labelForSearchText" text="Search:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                        <TextField fx:id="searchText" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                        <Button fx:id="searchButton" styleClass="shadow" onAction="#searchButtonHandler" text="Search" GridPane.columnIndex="2" />
+        <Tab text="Create new point">
+            <AnchorPane>
+                <GridPane alignment="center" hgap="10" vgap="10">
+                    <padding>
+                        <Insets bottom="10" left="25" right="25" top="25"/>
+                    </padding>
 
-                        <Label fx:id="labelForSearchResultsChoiceBox" text="Search results:" GridPane.rowIndex="1" />
-                        <ChoiceBox fx:id="searchResultsChoiceBox" prefHeight="25.0" prefWidth="500.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                    <Label fx:id="labelForSearchText" text="Search:" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+                    <TextField fx:id="searchText" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
+                    <Button fx:id="searchButton" styleClass="shadow" onAction="#searchButtonHandler" text="Search"
+                            GridPane.columnIndex="2"/>
 
-                        <Label fx:id="labelForLatitudeText" text="Latitude:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                        <ValidatedTextField fx:id="latitudeText" minLength="4" maxLength="20" mask="$LATITUDE_PATTERN" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <Label fx:id="labelForSearchResultsChoiceBox" text="Search results:" GridPane.rowIndex="1"/>
+                    <ChoiceBox fx:id="searchResultsChoiceBox" prefHeight="25.0" prefWidth="500.0"
+                               GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
-                        <Label fx:id="labelForLongitudeText" text="Longitude:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-                        <ValidatedTextField fx:id="longitudeText" minLength="4" maxLength="20" mask="$LONGITUDE_PATTERN" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                    <Label fx:id="labelForLatitudeText" text="Latitude:" GridPane.columnIndex="0"
+                           GridPane.rowIndex="2"/>
+                    <ValidatedTextField fx:id="latitudeText" minLength="3" maxLength="20" mask="$LATITUDE_PATTERN"
+                                        GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
-                        <Label fx:id="labelForLabelText" text="Point label:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                        <ValidatedTextField fx:id="labelText" minLength="3" maxLength="30" mask=".*" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                    <Label fx:id="labelForLongitudeText" text="Longitude:" GridPane.columnIndex="0"
+                           GridPane.rowIndex="3"/>
+                    <ValidatedTextField fx:id="longitudeText" minLength="3" maxLength="20" mask="$LONGITUDE_PATTERN"
+                                        GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 
-                        <Label fx:id="labelForRealEstatesChoiceBox" text="Point class:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-                        <ChoiceBox fx:id="realEstatesChoiceBox" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES" GridPane.rowIndex="5" />
+                    <Label fx:id="labelForLabelText" text="Point label:" GridPane.columnIndex="0"
+                           GridPane.rowIndex="4"/>
+                    <ValidatedTextField fx:id="labelText" minLength="3" maxLength="30" mask=".*"
+                                        GridPane.columnIndex="1" GridPane.rowIndex="4"/>
 
-                        <Label fx:id="labelForCommentText" text="Point comment:" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-                        <TextArea fx:id="commentText" maxHeight="50" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+                    <Label fx:id="labelForRealEstatesChoiceBox" text="Point class:" GridPane.columnIndex="0"
+                           GridPane.rowIndex="5"/>
+                    <ChoiceBox fx:id="realEstatesChoiceBox" GridPane.columnIndex="1" GridPane.hgrow="SOMETIMES"
+                               GridPane.rowIndex="5"/>
 
-                        <Label text="Audio file:" GridPane.columnIndex="0" GridPane.rowIndex="9" />
-                        <Text fx:id="fileName" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+                    <Label fx:id="labelForCommentText" text="Point comment:" GridPane.columnIndex="0"
+                           GridPane.rowIndex="8"/>
+                    <TextArea fx:id="commentText" maxHeight="50" GridPane.columnIndex="1" GridPane.rowIndex="8"/>
 
-                        <HBox alignment="BOTTOM_RIGHT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="9">
-                            <Button fx:id="selectFileButton" styleClass="shadow" onAction="#selectFile" text="Open File" />
-                        </HBox>
-                        <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="12">
-                            <Button fx:id="submitButton" styleClass="shadow" onAction="#submitHandler" text="Submit Point" />
-                        </HBox>
-                        <Text fx:id="submitStatus" styleClass="error" GridPane.columnIndex="1" GridPane.rowIndex="13" />
-                        <stylesheets>
-                            <URL value="@../css/BasicStyle.css" />
-                        </stylesheets>
-                        <columnConstraints>
-                            <ColumnConstraints />
-                            <ColumnConstraints />
-                            <ColumnConstraints />
-                        </columnConstraints>
-                        <rowConstraints>
-                            <RowConstraints />
-                            <RowConstraints />
-                            <RowConstraints />
-                            <RowConstraints />
-                            <RowConstraints />
-                            <RowConstraints />
-                     <RowConstraints />
-                     <RowConstraints />
-                     <RowConstraints />
-                     <RowConstraints />
-                     <RowConstraints />
-                     <RowConstraints />
-                     <RowConstraints />
-                        </rowConstraints>
-                    </GridPane>
+                    <Label text="Audio file:" GridPane.columnIndex="0" GridPane.rowIndex="9"/>
+                    <Text fx:id="fileName" GridPane.columnIndex="1" GridPane.rowIndex="9"/>
 
-                </AnchorPane>
-            </Tab>
-            <Tab text="Untitled Tab 2">
-                <ListView fx:id="individualsListView" layoutX="294.0" layoutY="237.0" minHeight="200" minWidth="100" prefHeight="292.0" prefWidth="160.0" />
-            </Tab>
-        </tabs>
+                    <HBox alignment="BOTTOM_RIGHT" spacing="10" GridPane.columnIndex="2" GridPane.rowIndex="9">
+                        <Button fx:id="selectFileButton" styleClass="shadow" onAction="#selectFile" text="Open File"/>
+                    </HBox>
+                    <HBox alignment="bottom_right" spacing="10" GridPane.columnIndex="1" GridPane.rowIndex="12">
+                        <Button fx:id="submitButton" styleClass="shadow" onAction="#submitHandler" text="Submit Point"/>
+                    </HBox>
+                    <Text fx:id="submitStatus" styleClass="error" GridPane.columnIndex="1" GridPane.rowIndex="13"/>
+                    <stylesheets>
+                        <URL value="@../css/BasicStyle.css"/>
+                    </stylesheets>
+                    <columnConstraints>
+                        <ColumnConstraints/>
+                        <ColumnConstraints/>
+                        <ColumnConstraints/>
+                    </columnConstraints>
+                    <rowConstraints>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                        <RowConstraints/>
+                    </rowConstraints>
+                </GridPane>
+
+            </AnchorPane>
+        </Tab>
+        <Tab text="Untitled Tab 2">
+            <ListView fx:id="individualsListView" layoutX="294.0" layoutY="237.0" minHeight="200" minWidth="100"
+                      prefHeight="292.0" prefWidth="160.0"/>
+        </Tab>
     </TabPane>
 
 
