--- a/src/main/resources/pl/pkubicki/css/BasicStyle.css
+++ b/src/main/resources/pl/pkubicki/css/BasicStyle.css
@@ -1,3 +1,6 @@
+.root {
+}
+
 .list-cell:filled:selected:focused, .list-cell:filled:selected {
     -fx-background-color: linear-gradient(#328BDB 0%, #207BCF 25%, #1973C9 75%, #0A65BF 100%);
     -fx-text-fill: white;
@@ -15,7 +18,7 @@
 	-fx-text-fill: white;
     -fx-font-family: "Arial";
     -fx-font-weight: bold;
-    -fx-background-color: linear-gradient(#61a2b1, #2A5058);
+    -fx-background-color: linear-gradient(#009ebf, #004654);
 }
 .button.shadow {
     -fx-effect: dropshadow( three-pass-box , rgba(0,0,0,0.6) , 5, 0.0 , 0 , 1 );
@@ -34,5 +37,11 @@
     -fx-text-fill: red;
 }
 .text {
+    -fx-font-size: 12pt;
+}
+.text-field {
+    -fx-font-size: 12pt;
+}
+.text-input {
     -fx-font-size: 12pt;
 }
