--- a/src/main/resources/pl/pkubicki/fxml/RouteTravel.fxml
+++ b/src/main/resources/pl/pkubicki/fxml/RouteTravel.fxml
@@ -5,74 +5,83 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import pl.pkubicki.extensions.ValidatedTextField?>
+<?import java.lang.String?>
 <GridPane alignment="center" hgap="10" styleClass="root" vgap="10" xmlns="http://javafx.com/javafx/8.0.271" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.pkubicki.controllers.RouteTravelController">
+    <fx:define>
+        <String fx:id="LATITUDE_PATTERN" fx:value="^(\+|-)?(?:90(?:(?:\.0+)?)|(?:[0-9]|[1-8][0-9])(?:(?:\.\d+)?))$"/>
+        <String fx:id="LONGITUDE_PATTERN" fx:value="^(\+|-)?(?:180(?:(?:\.0+)?)|(?:[0-9]|[1-9][0-9]|1[0-7][0-9])(?:(?:\.\d+)?))$"/>
+    </fx:define>
     <padding><Insets bottom="10" left="25" right="25" top="25" /></padding>
-<!--    <gridLinesVisible>true</gridLinesVisible>-->
-    <Label text="Search START:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+
+    <Label fx:id="labelForSearchStartText" text="Search START:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
     <TextField fx:id="searchStartText" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
     <Button fx:id="searchStartButton" onAction="#searchStartButtonHandler" styleClass="shadow" text="Search" GridPane.columnIndex="2" />
-    <Label text="Start point:" GridPane.rowIndex="1" />
+    <Label fx:id="labelForSearchStartResults" text="Start point:" GridPane.rowIndex="1" />
     <ChoiceBox fx:id="searchStartResultsChBox" prefHeight="25.0" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-    <Label text="Start Latitude:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-    <TextField fx:id="startLatitudeText" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-    <Label text="Start Longitude:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-    <TextField fx:id="startLongitudeText" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+    <Label fx:id="labelForStartLatitude" text="Start Latitude:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+    <ValidatedTextField fx:id="startLatitudeText" minLength="3" maxLength="20" mask="$LATITUDE_PATTERN" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+    <Label fx:id="labelForStartLongitude" text="Start Longitude:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+    <ValidatedTextField fx:id="startLongitudeText" minLength="3" maxLength="20" mask="$LONGITUDE_PATTERN" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
-    <Label text="Search END:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+    <Label fx:id="labelForSearchEndText" text="Search END:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
     <TextField fx:id="searchEndText" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
     <Button fx:id="searchEndButton" onAction="#searchEndButtonHandler" styleClass="shadow" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-    <Label text="End point:" GridPane.rowIndex="5" />
+    <Label fx:id="labelForSearchEndResults" text="End point:" GridPane.rowIndex="5" />
     <ChoiceBox fx:id="searchEndResultsChBox" prefHeight="25.0" prefWidth="400.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
-    <Label text="End Latitude:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-    <TextField fx:id="endLatitudeText" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-    <Label text="End Longitude:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-    <TextField fx:id="endLongitudeText" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+    <Label fx:id="labelForEndLatitude" text="End Latitude:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+    <ValidatedTextField fx:id="endLatitudeText" minLength="3" maxLength="20" mask="$LATITUDE_PATTERN" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+    <Label fx:id="labelForEndLongitude" text="End Longitude:" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+    <ValidatedTextField fx:id="endLongitudeText" minLength="3" maxLength="20" mask="$LONGITUDE_PATTERN" prefWidth="380.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
 
     <Button fx:id="generateRouteButton" onAction="#generateRouteButtonHandler" styleClass="shadow" text="Generate Travel Route" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" />
 
     <GridPane GridPane.rowIndex="9">
 
-        <children>
-            <Label text="Vicinity dist. [m]:" GridPane.rowIndex="1" />
-            <ChoiceBox fx:id="vicinityChBox" prefHeight="20.0" prefWidth="100.0" GridPane.rowIndex="2" GridPane.valignment="TOP" />
-        </children>
-      <columnConstraints>
-         <ColumnConstraints />
-      </columnConstraints>
-      <rowConstraints>
-         <RowConstraints />
-         <RowConstraints />
-         <RowConstraints />
-      </rowConstraints>
+        <columnConstraints>
+            <ColumnConstraints/>
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints/>
+            <RowConstraints/>
+            <RowConstraints/>
+        </rowConstraints>
+        <Label fx:id="labelForVicinityChBox" text="Vicinity dist. [m]:" GridPane.rowIndex="1"/>
+        <ChoiceBox fx:id="vicinityChBox" prefHeight="20.0" prefWidth="100.0" GridPane.rowIndex="2"
+                   GridPane.valignment="TOP"/>
     </GridPane>
 
     <ListView fx:id="routePointsListView" prefHeight="300" prefWidth="400" GridPane.columnIndex="1" GridPane.rowIndex="9" />
 
     <GridPane GridPane.columnIndex="1" GridPane.rowIndex="10">
         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
         </columnConstraints>
         <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
         </rowConstraints>
-        <children>
-            <Button fx:id="buttonPlay" minHeight="50.0" minWidth="70.0" mnemonicParsing="false" onAction="#playAudio" styleClass="shadow, play" text="|&gt;" GridPane.halignment="CENTER">
-                <GridPane.margin>
-                    <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-                </GridPane.margin></Button>
-            <Button fx:id="buttonPause" mnemonicParsing="false" onAction="#pauseAudio" minHeight="50.0" minWidth="70.0" styleClass="shadow, pause" text="||" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-                <GridPane.margin>
-                    <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-                </GridPane.margin></Button>
-            <Button fx:id="buttonStop" mnemonicParsing="false" onAction="#stopAudio" minHeight="50.0" minWidth="70.0" styleClass="shadow, stop" text="[x]" GridPane.columnIndex="2" GridPane.halignment="CENTER">
-                <GridPane.margin>
-                    <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
-                </GridPane.margin></Button>
-        </children>
+        <Button fx:id="playButton" minHeight="50.0" minWidth="70.0" mnemonicParsing="false" onAction="#playAudio"
+                styleClass="shadow, play" text="|&gt;" GridPane.halignment="CENTER">
+            <GridPane.margin>
+                <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
+            </GridPane.margin>
+        </Button>
+        <Button fx:id="pauseButton" mnemonicParsing="false" onAction="#pauseAudio" minHeight="50.0" minWidth="70.0"
+                styleClass="shadow, pause" text="||" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <GridPane.margin>
+                <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
+            </GridPane.margin>
+        </Button>
+        <Button fx:id="stopButton" mnemonicParsing="false" onAction="#stopAudio" minHeight="50.0" minWidth="70.0"
+                styleClass="shadow, stop" text="[x]" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+            <GridPane.margin>
+                <Insets bottom="3.0" left="3.0" right="3.0" top="3.0"/>
+            </GridPane.margin>
+        </Button>
     </GridPane>
 
     <stylesheets>
